BSERVDEV-13890: Rename AWS ES strategy
Move check_config_var ES checks
Split ES credentials into username + password

--- a/bitbucket.diy-backup.vars.sh.example
+++ b/bitbucket.diy-backup.vars.sh.example
@@ -51,7 +51,7 @@ BACKUP_ARCHIVE_TYPE=tar
 #  - s3                 - Amazon S3 bucket - requires the Elasticsearch Cloud plugin to be installed. See
 #                         https://www.elastic.co/guide/en/elasticsearch/plugins/2.3/cloud-aws.html
 #
-#  - aws                - Amazon Elasticsearch Service - uses an S3 bucket as a snapshot repository
+#  - amazon-es          - Amazon Elasticsearch Service - uses an S3 bucket as a snapshot repository
 BACKUP_ELASTICSEARCH_TYPE=
 
 # If BACKUP_ZERO_DOWNTIME is set to true, the home directory and database will be backed up WITHOUT locking Bitbucket
@@ -252,7 +252,7 @@ ELASTICSEARCH_HOST=localhost:7992
 ELASTICSEARCH_REPOSITORY_NAME=bitbucket-snapshots
 
 case ${BACKUP_ELASTICSEARCH_TYPE} in
-    aws)
+    amazon-es)
         # Configuration for the Amazon Elasticsearch Service
         ELASTICSEARCH_S3_BUCKET=
         ELASTICSEARCH_S3_BUCKET_REGION=us-east-1
@@ -263,14 +263,16 @@ case ${BACKUP_ELASTICSEARCH_TYPE} in
         # Configuration for the Amazon S3 snapshot repository (s3)
         ELASTICSEARCH_S3_BUCKET=
         ELASTICSEARCH_S3_BUCKET_REGION=us-east-1
-        # Elasticsearch credentials in the format: -u "username:password"
-        ELASTICSEARCH_CREDENTIALS=
+        # Elasticsearch credentials
+        ELASTICSEARCH_USERNAME=
+        ELASTICSEARCH_PASSWORD=
         ;;
     fs)
         # Configuration for the shared filesystem snapshot repository (fs)
         ELASTICSEARCH_REPOSITORY_LOCATION=
-        # Elasticsearch credentials in the format: -u "username:password"
-        ELASTICSEARCH_CREDENTIALS=
+        # Elasticsearch credentials
+        ELASTICSEARCH_USERNAME=
+        ELASTICSEARCH_PASSWORD=
         ;;
 esac
 
