SSP-18519: Fix fsfreeze comment, remove fsfreeze from rsync example vars

--- a/bitbucket.diy-backup.vars.sh.example
+++ b/bitbucket.diy-backup.vars.sh.example
@@ -211,7 +211,7 @@ esac
 # Options to pass to every "curl" command
 CURL_OPTIONS="-L -s -f"
 
-# Ensure we run fsfreeze when not using BACKUP_ZERO_DOWNTIME=true
+# Ensure we run fsfreeze
 FSFREEZE=true
 
 # === AWS Variables ===
